# printrgb

./: README.md  build.bat  build.sh  pyproject.toml
src/printrgb/: __init__.py  __main__.py  printrgb.py  printrgb.pyi
src/printrgb.egg-info/: PKG-INFO
