[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printrgb"
version = "1.1.6"
description = "Print rainbow text in terminal with true-color"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "LuoTainyi-arm64", email = "2153585992@qq.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.scripts]
printrgb = "printrgb.__main__:main"




[project.urls]
Homepage = "https://github.com/LuoTianyi-arm64/printrgb"